# PawPaste

./: README.md  components.json  copy.html  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  Copy.tsx  copypage.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/ui/: scroll-area.tsx  scroll-area_copy.tsx
src/json/: data.json
