[package]
name = "paw-paste"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-message", "window-create", "path-all", "fs-all", "notification-all", "clipboard-all", "window-set-size", "window-set-decorations", "window-set-position", "window-set-skip-taskbar", "window-set-always-on-top", "window-set-focus", "window-center", "window-show", "window-hide", "system-tray", "shell-sidecar", "shell-open", "shell-execute", "global-shortcut-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rsautogui = "0.2.2"
selection = "1.1.1"
clipboard-win = "5.2.0"
enigo = "0.1.3"
window-vibrancy = "0.4.0"
window-shadows = "0.2.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
